# 06-smart-grid-simulator

./: README.md  package.json
frontend/: index.html  package.json  vite.config.js
frontend/electron/main/: index.js
frontend/electron/preload/: index.js
frontend/src/: App.vue  style.css
frontend/src/components/: ControlPanel.vue  DataPanel.vue  GridCanvas.vue  Toolbar.vue
frontend/src/stores/: grid.js
native/: CMakeLists.txt  index.js  package-lock.json  package.json
native/include/binding/: GridSolverWrapper.h
native/include/core/: CDFParser.h  GridData.h
native/include/solver/: ComputationGuard.h  NewtonRaphsonSolver.h
native/src/binding/: GridSolverWrapper.cpp  main.cpp
native/src/core/: CDFParser.cpp  GridData.cpp
native/src/solver/: NewtonRaphsonSolver.cpp
samples/: ieee14.cdf  ieee5.cdf
test/: run-tests.js
